--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
         // a/b：既約でb > 1
         do {
           a = Math.floor(Math.random() * 9) + 1;
-          b = Math.floor(Math.random() * 14) + 2; // b = 2〜9
+          b = Math.floor(Math.random() * 8) + 2; // b = 2〜9
         } while (gcd(a, b) !== 1);
 
         // e/f：既約でf > 1
         do {
           e = Math.floor(Math.random() * 9) + 1;
-          f = Math.floor(Math.random() * 14) + 2; // f = 2〜9
+          f = Math.floor(Math.random() * 8) + 2; // f = 2〜9
         } while (gcd(e, f) !== 1);
 
-        m = Math.floor(Math.random() * 5) + 1;
-        n = Math.floor(Math.random() * 5) + 1;
+        m = Math.floor(Math.random() * 4) + 1;
+        n = Math.floor(Math.random() * 4) + 1;
 
         c = m * b * f;
         d = n * a * e;
@@ -97,4 +97,18 @@
     function showAnswer() {
       const [f1, f2, f3] = currentProblem.fractions;
       const num = f1[0] * f2[0] * f3[0];
-      const den = f1[1] * f2[1]*
+      const den = f1[1] * f2[1] * f3[1];
+      const [rNum, rDen] = reduceFraction(num, den);
+      document.getElementById("answer").textContent = `答え：${rNum}/${rDen}`;
+    }
+
+    function nextProblem() {
+      currentProblem = generateProblem();
+      displayProblem();
+    }
+
+    // 初期表示
+    nextProblem();
+  </script>
+</body>
+</html>
