--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     }
     .fraction-bar {
       border-top: 1px solid #000;
-      width: 30px;
+      width: 20px;
       margin: 0 auto;
     }
     button {
@@ -68,18 +68,34 @@
     }
 
     function generateProblem() {
-      do {
-        a = Math.floor(Math.random() * 20) + 1;
-        b = Math.floor(Math.random() * 19) + 2; // b > 1
-        e = Math.floor(Math.random() * 20) + 1;
-        f = Math.floor(Math.random() * 19) + 2; // f > 1
-        do {
-          m = Math.floor(Math.random() * 10) + 1;
-          n = Math.floor(Math.random() * 9) + 2; // n > 1
-        } while (gcd(m * b * f, n * a * e) !== 1);
+      const maxAttempts = 1000;
+      let attempts = 0;
+      let valid = false;
+
+      while (attempts < maxAttempts) {
+        attempts++;
+        a = Math.floor(Math.random() * 30) + 1;
+        b = Math.floor(Math.random() * 29) + 2;
+        e = Math.floor(Math.random() * 30) + 1;
+        f = Math.floor(Math.random() * 29) + 2;
+        m = Math.floor(Math.random() * 10) + 1;
+        n = Math.floor(Math.random() * 9) + 2;
+
         c = m * b * f;
         d = n * a * e;
-      } while (c > 200 || d > 200);
+
+        if (gcd(c, d) === 1 && c <= 200 && d <= 200) {
+          valid = true;
+          break;
+        }
+      }
+
+      if (!valid) {
+        document.getElementById("problem").innerHTML = "<p style='color:red;'>問題の生成に失敗しました。ページを再読み込みしてください。</p>";
+        document.getElementById("feedback").innerHTML = "";
+        document.getElementById("buttons").innerHTML = "";
+        return;
+      }
 
       const problemDiv = document.getElementById("problem");
       problemDiv.innerHTML = `
