--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
       text-align: center;
       padding: 20px;
     }
-    .fraction {
-      display: inline-block;
-      text-align: center;
-      vertical-align: middle;
-      margin: 0 5px;
-    }
-    .fraction .top {
-      border-bottom: 1px solid #000;
-      padding: 2px 4px;
-    }
-    .fraction .bottom {
-      padding: 2px 4px;
-    }
+.fraction {
+  display: inline-block;
+  text-align: center;
+  vertical-align: middle;
+  margin: 0 5px;
+  white-space: nowrap; /* 追加 */
+}
+.fraction .top {
+  border-bottom: 1px solid #000;
+  padding: 1px 3px; /* 調整 */
+}
+.fraction .bottom {
+  padding: 1px 3px; /* 調整 */
+}
+
     .centered {
       display: flex;
       flex-direction: column;
