--- a/index.html
+++ b/index.html
@@ -42,10 +42,16 @@
       margin: 6px 0;
     }
     button {
-      margin: 10px;
-      padding: 18px 24px;
-      font-size: 22px;
-      min-width: 200px;
+      font-size: 1.2em;
+      margin: 0.5em;
+      padding: 0.5em 1em;
+      border: none;
+      border-radius: 0.5em;
+      cursor: pointer;
+    }
+    #submitBtn {
+      background-color: #3498db;
+      color: white;
     }
     .problem-line {
       display: flex;
@@ -72,7 +78,7 @@
   </div>
 
   <div class="centered">
-    <button onclick="checkAnswer()">答え合わせ</button>
+    <button onclick="checkAnswer()" id="submitBtn">答え合わせ</button>
     <div id="feedback"></div>
     <div id="streakDisplay" style="margin-top: 10px; font-weight: bold;"></div>
     <div id="buttons"></div>
