--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       const userDenominator = document.getElementById("userDenominator");
 
       if (!valid) {
-        problemDiv.innerHTML = "<p style='color:red;'>問題の生成に失敗しました。ページを再読み込みしてください。</p>";
+        problemDiv.innerHTML = "<p style='color:red;'>問題の生成に失敗しました。「答え合わせ」→「次の問題」で次に進んでください。</p>";
         feedback.innerHTML = "";
         buttons.innerHTML = "";
         return;
